Process Hacker

1.3.9.5
 * NEW/IMPROVED:
   * Better process window exit status display
   * Better handle granted access display
   * Thread list is more responsive
   * Process exit notification (in the process window) is now instant
 * FIXED:
   * Properties menu item for handles was disabled most of the time
   * Handle names could not be viewed properly without KPH and 
     on systems without the VC++ 9 runtime

1.3.9.0
 * NEW/IMPROVED:
   * #2812814 - "Auto-scroll option should be remembered"
   * Kernel-mode stack traces
   * POSIX process support, including command lines and 
     highlighting
   * Hidden processes scanner can now detect FUTo
   * Highlighting for .NET and relocated DLLs
   * Ability to terminate system threads
   * Ability to force terminate threads
   * Ability to create services
   * Ability to set DEP status of processes in other sessions
   * Ability to unload modules of processes in other sessions
   * Ability to dump memory to a file
   * Process window manipulation
   * Process heap information
   * Paged and non-paged pool limit display
   * Terminator test: TP1a (TP1, alternative method)
   * Terminator test: TT1a (TT1, alternative method)
   * Terminator test: TT4 (dangerous thread termination)
   * Better file object names without KProcessHacker
   * Better IP address resolving
   * CPU, I/O and memory indicators
   * Child windows float by default
   * dbghelp is now set up automatically when Process Hacker is 
     run the first time
   * Thread wait analysis now detects NtQueryObject hangs and 
     named pipe connections
   * Automatic tree text coloring, allowing for dark highlighting 
     colors
   * Small performance improvements
 * FIXED:
   * #2811733 - "System.NullReferenceException"
   * Broken system thread start addresses due to sign-extending 
     instead of zero-extending pointers
   * Broken Ctrl+A for memory, results, and PE lists
   * Removed several annoying thread-related warnings